[package]
name = "pkrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
blake3 = "1.3.3"
clap = { version = "4.1.4", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
toml = "0.5.11"
