[package]
name = "pkrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
blake3 = "1.3.3"
clap = { version = "4.1.4", features = ["derive"] }
eframe = "0.21.3"
egui_extras = "0.21.0"
image = "0.24.5"
opener = "0.5.2"
poll-promise = "0.2.0"
rfd = "0.11.2"
rusqlite = { version = "0.28.0", features = ["bundled", "vtab", "array"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
toml = "0.5.11"
walkdir = "2.3.3"
